# Design_Pattern_Cpp

Assignments/: SOLID_Assignments.md  solid_principles_dip.cpp  solid_principles_isp.cpp  solid_principles_lsp.cpp  solid_principles_ocp.cpp  solid_principles_srp.cpp
Assignments/Others_Assignments/: CMakeLists.txt  GameManager.h  Question.h  QuestionSelectionStrategy.h  README.md  build.bat  main.cpp
Creational_Patterns/: creational_patterns_singleton.cpp  solid_principles_dip.cpp  solid_principles_isp.cpp  solid_principles_lsp.cpp  solid_principles_ocp.cpp  solid_principles_srp.cpp
